fixed boxes gap

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ header {
     flex-flow: row wrap;
 
 }
+
 .left {
     display: flex;
     flex-direction: column;
@@ -165,15 +166,16 @@ header {
 
 .box > p {
     margin-top: .5rem;
+    font-style: italic;
+    font-weight: 700;
 }
 
 .boxes {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    gap: 6rem;
+    gap: 2rem;
 }
-
 
 .box:hover {
     color: white;
@@ -186,8 +188,6 @@ header {
     background-color: azure;
     border-radius: 3px;
 }
-
-
 
 /* third div */
 
@@ -233,6 +233,7 @@ header {
 }
 
 /* fourth div */
+
 .fourth {
     display: flex;
     justify-content: center;
@@ -240,7 +241,6 @@ header {
     background-color: #08110b9c;
     color: white;
 }
-
 
 .for {
     display: flex;
@@ -251,7 +251,6 @@ header {
     border-radius: 3px;
     gap: 3rem;
 }
-
 
 .text :first-child {
     font-weight: 900;
@@ -363,6 +362,4 @@ footer {
     footer {
         padding: 1rem;
     }
-
-
 }
